Fix the mobile pdf build

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -884,6 +884,7 @@
 
 
 \tunemarkup{pgnexus7}{%
+\setcounter{DefaultLines}{2}
 \protected\def\print@vssup#1{\makebox[0.2em][r]{\@textsuperscript{\headerfont\fontsize{10}{10}\selectfont#1}}\kern0.2em\relax}
 \definecolor{ubpagecolor}{rgb}{0.0, 0.0, 0.2}
 %\definecolor{ubpagebg}{rgb}{1.0, 1.0, 0.7}
