pretense => pretence (US => British)

--- a/tex/p070.tex
+++ b/tex/p070.tex
@@ -166,7 +166,7 @@
 \vs p070 10:6 The Old Testament records one of these ordeals, a marital guilt test: If a man suspected his wife of being untrue to him, he took her to the priest and stated his suspicions, after which the priest would prepare a concoction consisting of holy water and sweepings from the temple floor. After due ceremony, including threatening curses, the accused wife was made to drink the nasty potion. If she was guilty, “the water that causes the curse shall enter into her and become bitter, and her belly shall swell, and her thighs shall rot, and the woman shall be accursed among her people.” If, by any chance, any woman could quaff this filthy draught and not show symptoms of physical illness, she was acquitted of the charges made by her jealous husband.
 \vs p070 10:7 These atrocious methods of crime detection were practised by almost all the evolving tribes at one time or another. Duelling is a modern survival of the trial by ordeal.
 \vs p070 10:8 It is not to be wondered that the Hebrews and other semicivilized tribes practised such primitive techniques of justice administration 3,000 years ago, but it is most amazing that thinking men would subsequently retain such a relic of barbarism within the pages of a collection of sacred writings. Reflective thinking should make it clear that no divine being ever gave mortal man such unfair instructions regarding the detection and adjudication of suspected marital unfaithfulness.
-\vs p070 10:9 \pc Society early adopted the paying\hyp{}back attitude of retaliation: an eye for an eye, a life for a life. The evolving tribes all recognized this right of blood vengeance. Vengeance became the aim of primitive life, but religion has since greatly modified these early tribal practices. The teachers of revealed religion have always proclaimed, “‘Vengeance is mine,’ says the Lord.” Vengeance killing in early times was not altogether unlike present\hyp{}day murders under the pretense of the unwritten law.
+\vs p070 10:9 \pc Society early adopted the paying\hyp{}back attitude of retaliation: an eye for an eye, a life for a life. The evolving tribes all recognized this right of blood vengeance. Vengeance became the aim of primitive life, but religion has since greatly modified these early tribal practices. The teachers of revealed religion have always proclaimed, “‘Vengeance is mine,’ says the Lord.” Vengeance killing in early times was not altogether unlike present\hyp{}day murders under the pretence of the unwritten law.
 \vs p070 10:10 Suicide was a common mode of retaliation. If one were unable to avenge himself in life, he died entertaining the belief that, as a ghost, he could return and visit wrath upon his enemy. And since this belief was very general, the threat of suicide on an enemy’s doorstep was usually sufficient to bring him to terms. Primitive man did not hold life very dear; suicide over trifles was common, but the teachings of the Dalamatians greatly lessened this custom, while in more recent times leisure, comforts, religion, and philosophy have united to make life sweeter and more desirable. Hunger strikes are, however, a modern analogue of this old\hyp{}time method of retaliation.
 \vs p070 10:11 One of the earliest formulations of advanced tribal law had to do with the taking over of the blood feud as a tribal affair. But strange to relate, even then a man could kill his wife without punishment provided he had fully paid for her. The Eskimos of today, however, still leave the penalty for a crime, even for murder, to be decreed and administered by the family wronged.
 \vs p070 10:12 Another advance was the imposition of fines for taboo violations, the provision of penalties. These fines constituted the first public revenue. The practice of paying “blood money” also came into vogue as a substitute for blood vengeance. Such damages were usually paid in women or cattle; it was a long time before actual fines, monetary compensation, were assessed as punishment for crime. And since the idea of punishment was essentially compensation, everything, including human life, eventually came to have a price which could be paid as damages. The Hebrews were the first to abolish the practice of paying blood money. Moses taught that they should “take no satisfaction for the life of a murderer, who is guilty of death; he shall surely be put to death.”
