--- a/tex/p100.tex
+++ b/tex/p100.tex
@@ -67,7 +67,7 @@
 \vs p100 6:9 The characteristic difference between evolved and revealed religion is a new quality of divine wisdom which is added to purely experiential human wisdom. But it is experience in and with the human religions that develops the capacity for subsequent reception of increased bestowals of divine wisdom and cosmic insight.
 \usection{The Acme of Religious Living}
 \vs p100 7:1 Although the average mortal of Urantia cannot hope to attain the high perfection of character which Jesus of Nazareth acquired while sojourning in the flesh, it is altogether possible for every mortal believer to develop a strong and unified personality along the perfected lines of the Jesus personality. The unique feature of the Master’s personality was not so much its perfection as its symmetry, its exquisite and balanced unification. The most effective presentation of Jesus consists in following the example of the one who said, as he gestured toward the Master standing before his accusers, “Behold the man!”
-\vs p100 7:2 The unfailing kindness of Jesus touched the hearts of men, but his stalwart strength of character amazed his followers. He was truly sincere; there was nothing of the hypocrite in him. He was free from affectation; he was always so refreshingly genuine. He never stooped to pretense, and he never resorted to shamming. He lived the truth, even as he taught it. He was the truth. He was constrained to proclaim saving truth to his generation, even though such sincerity sometimes caused pain. He was unquestioningly loyal to all truth.
+\vs p100 7:2 The unfailing kindness of Jesus touched the hearts of men, but his stalwart strength of character amazed his followers. He was truly sincere; there was nothing of the hypocrite in him. He was free from affectation; he was always so refreshingly genuine. He never stooped to pretence, and he never resorted to shamming. He lived the truth, even as he taught it. He was the truth. He was constrained to proclaim saving truth to his generation, even though such sincerity sometimes caused pain. He was unquestioningly loyal to all truth.
 \vs p100 7:3 But the Master was so reasonable, so approachable. He was so practical in all his ministry, while all his plans were characterized by such sanctified common sense. He was so free from all freakish, erratic, and eccentric tendencies. He was never capricious, whimsical, or hysterical. In all his teaching and in everything he did there was always an exquisite discrimination associated with an extraordinary sense of propriety.
 \vs p100 7:4 The Son of Man was always a well\hyp{}poised personality. Even his enemies maintained a wholesome respect for him; they even feared his presence. Jesus was unafraid. He was surcharged with divine enthusiasm, but he never became fanatical. He was emotionally active but never flighty. He was imaginative but always practical. He frankly faced the realities of life, but he was never dull or prosaic. He was courageous but never reckless; prudent but never cowardly. He was sympathetic but not sentimental; unique but not eccentric. He was pious but not sanctimonious. And he was so well\hyp{}poised because he was so perfectly unified.
 \vs p100 7:5 Jesus’ originality was unstifled. He was not bound by tradition or handicapped by enslavement to narrow conventionality. He spoke with undoubted confidence and taught with absolute authority. But his superb originality did not cause him to overlook the gems of truth in the teachings of his predecessors and contemporaries. And the most original of his teachings was the emphasis of love and mercy in the place of fear and sacrifice.
