--- a/tex/p139.tex
+++ b/tex/p139.tex
@@ -45,7 +45,7 @@
 \vs p139 2:15 \pc And so this man Peter, an intimate of Jesus, one of the inner circle, went forth from Jerusalem proclaiming the glad tidings of the kingdom with power and glory until the fullness of his ministry had been accomplished; and he regarded himself as the recipient of high honours when his captors informed him that he must die as his Master had died --- on the cross. And thus was Simon Peter crucified in Rome.
 \usection{James Zebedee}
 \vs p139 3:1 James, the older of the two apostle sons of Zebedee, whom Jesus nicknamed “sons of thunder,” was 30 years old when he became an apostle. He was married, had 4 children, and lived near his parents in the outskirts of Capernaum, Bethsaida. He was a fisherman, plying his calling in company with his younger brother John and in association with Andrew and Simon. James and his brother John enjoyed the advantage of having known Jesus longer than any of the other apostles.
-\vs p139 3:2 \pc This able apostle was a temperamental contradiction; he seemed really to possess two natures, both of which were actuated by strong feelings. He was particularly vehement when his indignation was once fully aroused. He had a fiery temper when once it was adequately provoked, and when the storm was over, he was always wont to justify and excuse his anger under the pretense that it was wholly a manifestation of righteous indignation. Except for these periodic upheavals of wrath, James’s personality was much like that of Andrew. He did not have Andrew’s discretion or insight into human nature, but he was a much better public speaker. Next to Peter, unless it was Matthew, James was the best public orator among the twelve.
+\vs p139 3:2 \pc This able apostle was a temperamental contradiction; he seemed really to possess two natures, both of which were actuated by strong feelings. He was particularly vehement when his indignation was once fully aroused. He had a fiery temper when once it was adequately provoked, and when the storm was over, he was always wont to justify and excuse his anger under the pretence that it was wholly a manifestation of righteous indignation. Except for these periodic upheavals of wrath, James’s personality was much like that of Andrew. He did not have Andrew’s discretion or insight into human nature, but he was a much better public speaker. Next to Peter, unless it was Matthew, James was the best public orator among the twelve.
 \vs p139 3:3 Though James was in no sense moody, he could be quiet and taciturn one day and a very good talker and storyteller the next. He usually talked freely with Jesus, but among the twelve, for days at a time he was the silent man. His one great weakness was these spells of unaccountable silence.
 \vs p139 3:4 The outstanding feature of James’s personality was his ability to see all sides of a proposition. Of all the twelve, he came the nearest to grasping the real import and significance of Jesus’ teaching. He, too, was slow at first to comprehend the Master’s meaning, but ere they had finished their training, he had acquired a superior concept of Jesus’ message. James was able to understand a wide range of human nature; he got along well with the versatile Andrew, the impetuous Peter, and his self\hyp{}contained brother John.
 \vs p139 3:5 Though James and John had their troubles trying to work together, it was inspiring to observe how well they got along. They did not succeed quite so well as Andrew and Peter, but they did much better than would ordinarily be expected of two brothers, especially such headstrong and determined brothers. But, strange as it may seem, these two sons of Zebedee were much more tolerant of each other than they were of strangers. They had great affection for one another; they had always been happy playmates. It was these “sons of thunder” who wanted to call fire down from heaven to destroy the Samaritans who presumed to show disrespect for their Master. But the untimely death of James greatly modified the vehement temperament of his younger brother John.
