--- a/tex/p166.tex
+++ b/tex/p166.tex
@@ -11,7 +11,7 @@
 \vs p166 1:1 On Sabbath, February 18, Jesus was at Ragaba, where there lived a wealthy Pharisee named Nathaniel; and since quite a number of his fellow Pharisees were following Jesus and the twelve around the country, he made a breakfast on this Sabbath morning for all of them, about 20 in number, and invited Jesus as the guest of honour.
 \vs p166 1:2 By the time Jesus arrived at this breakfast, most of the Pharisees, with two or three lawyers, were already there and seated at the table. The Master immediately took his seat at the left of Nathaniel without going to the water basins to wash his hands. Many of the Pharisees, especially those favourable to Jesus’ teachings, knew that he washed his hands only for purposes of cleanliness, that he abhorred these purely ceremonial performances; so they were not surprised at his coming directly to the table without having twice washed his hands. But Nathaniel was shocked by this failure of the Master to comply with the strict requirements of Pharisaic practice. Neither did Jesus wash his hands, as did the Pharisees, after each course of food nor at the end of the meal.
 \vs p166 1:3 After considerable whispering between Nathaniel and an unfriendly Pharisee on his right and after much lifting of eyebrows and sneering curling of lips by those who sat opposite the Master, Jesus finally said: \textcolour{ubdarkred}{“I had thought that you invited me to this house to break bread with you and perchance to inquire of me concerning the proclamation of the new gospel of the kingdom of God; but I perceive that you have brought me here to witness an exhibition of ceremonial devotion to your own self\hyp{}righteousness. That service you have now done me; what next will you honour me with as your guest on this occasion?”}
-\vs p166 1:4 When the Master had thus spoken, they cast their eyes upon the table and remained silent. And since no one spoke, Jesus continued: \textcolour{ubdarkred}{“Many of you Pharisees are here with me as friends, some are even my disciples, but the majority of the Pharisees are persistent in their refusal to see the light and acknowledge the truth, even when the work of the gospel is brought before them in great power. How carefully you cleanse the outside of the cups and the platters while the spiritual\hyp{}food vessels are filthy and polluted! You make sure to present a pious and holy appearance to the people, but your inner souls are filled with self\hyp{}righteousness, covetousness, extortion, and all manner of spiritual wickedness. Your leaders even dare to plot and plan the murder of the Son of Man. Do not you foolish men understand that the God of heaven looks at the inner motives of the soul as well as on your outer pretenses and your pious professions? Think not that the giving of alms and the paying of tithes will cleanse you from unrighteousness and enable you to stand clean in the presence of the Judge of all men. Woe upon you Pharisees who have persisted in rejecting the light of life! You are meticulous in tithing and ostentatious in almsgiving, but you knowingly spurn the visitation of God and reject the revelation of his love. Though it is all right for you to give attention to these minor duties, you should not have left these weightier requirements undone. Woe upon all who shun justice, spurn mercy, and reject truth! Woe upon all those who despise the revelation of the Father while they seek the chief seats in the synagogue and crave flattering salutations in the market places!”}
+\vs p166 1:4 When the Master had thus spoken, they cast their eyes upon the table and remained silent. And since no one spoke, Jesus continued: \textcolour{ubdarkred}{“Many of you Pharisees are here with me as friends, some are even my disciples, but the majority of the Pharisees are persistent in their refusal to see the light and acknowledge the truth, even when the work of the gospel is brought before them in great power. How carefully you cleanse the outside of the cups and the platters while the spiritual\hyp{}food vessels are filthy and polluted! You make sure to present a pious and holy appearance to the people, but your inner souls are filled with self\hyp{}righteousness, covetousness, extortion, and all manner of spiritual wickedness. Your leaders even dare to plot and plan the murder of the Son of Man. Do not you foolish men understand that the God of heaven looks at the inner motives of the soul as well as on your outer pretences and your pious professions? Think not that the giving of alms and the paying of tithes will cleanse you from unrighteousness and enable you to stand clean in the presence of the Judge of all men. Woe upon you Pharisees who have persisted in rejecting the light of life! You are meticulous in tithing and ostentatious in almsgiving, but you knowingly spurn the visitation of God and reject the revelation of his love. Though it is all right for you to give attention to these minor duties, you should not have left these weightier requirements undone. Woe upon all who shun justice, spurn mercy, and reject truth! Woe upon all those who despise the revelation of the Father while they seek the chief seats in the synagogue and crave flattering salutations in the market places!”}
 \vs p166 1:5 \pc When Jesus would have risen to depart, one of the lawyers who was at the table, addressing him, said: “But, Master, in some of your statements you reproach us also. Is there nothing good in the scribes, the Pharisees, or the lawyers?” And Jesus, standing, replied to the lawyer: \textcolour{ubdarkred}{“You, like the Pharisees, delight in the first places at the feasts and in wearing long robes while you put heavy burdens, grievous to be borne, on men’s shoulders. And when the souls of men stagger under these heavy burdens, you will not so much as lift with one of your fingers. Woe upon you who take your greatest delight in building tombs for the prophets your fathers killed! And that you consent to what your fathers did is made manifest when you now plan to kill those who come in this day doing what the prophets did in their day --- proclaiming the righteousness of God and revealing the mercy of the heavenly Father. But of all the generations that are past, the blood of the prophets and the apostles shall be required of this perverse and self\hyp{}righteous generation. Woe upon all of you lawyers who have taken away the key of knowledge from the common people! You yourselves refuse to enter into the way of truth, and at the same time you would hinder all others who seek to enter therein. But you cannot thus shut up the doors of the kingdom of heaven; these we have opened to all who have the faith to enter, and these portals of mercy shall not be closed by the prejudice and arrogance of false teachers and untrue shepherds who are like whited sepulchres which, while outwardly they appear beautiful, are inwardly full of dead men’s bones and all manner of spiritual uncleanness.”}
 \vs p166 1:6 And when Jesus had finished speaking at Nathaniel’s table, he went out of the house without partaking of food. And of the Pharisees who heard these words, some became believers in his teaching and entered into the kingdom, but the larger number persisted in the way of darkness, becoming all the more determined to lie in wait for him that they might catch some of his words which could be used to bring him to trial and judgment before the Sanhedrin at Jerusalem.
 \vs p166 1:7 \pc There were just three things to which the Pharisees paid particular attention:
