--- a/tex/p175.tex
+++ b/tex/p175.tex
@@ -15,7 +15,7 @@
 \vs p175 1:6 \textcolour{ubdarkred}{“And when you do once reject this revelation of God to man, the kingdom of heaven shall be given to other peoples, to those who will receive it with joy and gladness. In the name of the Father who sent me, I solemnly warn you that you are about to lose your position in the world as the standard\hyp{}bearers of eternal truth and the custodians of the divine law. I am just now offering you your last chance to come forward and repent, to signify your intention to seek God with all your hearts and to enter, like little children and by sincere faith, into the security and salvation of the kingdom of heaven.}
 \vs p175 1:7 \textcolour{ubdarkred}{“My Father has long worked for your salvation, and I came down to live among you and personally show you the way. Many of both the Jews and the Samaritans, and even the gentiles, have believed the gospel of the kingdom, but those who should be first to come forward and accept the light of heaven have steadfastly refused to believe the revelation of the truth of God --- God revealed in man and man uplifted to God.}
 \vs p175 1:8 \textcolour{ubdarkred}{“This afternoon my apostles stand here before you in silence, but you shall soon hear their voices ringing out with the call to salvation and with the urge to unite with the heavenly kingdom as the sons of the living God. And now I call to witness these, my disciples and believers in the gospel of the kingdom, as well as the unseen messengers by their sides, that I have once more offered Israel and her rulers deliverance and salvation. But you all behold how the Father’s mercy is slighted and how the messengers of truth are rejected. Nevertheless, I admonish you that these scribes and Pharisees still sit in Moses’ seat, and therefore, until the Most Highs who rule in the kingdoms of men shall finally overthrow this nation and destroy the place of these rulers, I bid you co\hyp{}operate with these elders in Israel. You are not required to unite with them in their plans to destroy the Son of Man, but in everything related to the peace of Israel you are to be subject to them. In all these matters do whatsoever they bid you and observe the essentials of the law but do not pattern after their evil works. Remember, this is the sin of these rulers: They say that which is good, but they do it not. You well know how these leaders bind heavy burdens on your shoulders, burdens grievous to bear, and that they will not lift as much as one finger to help you bear these weighty burdens. They have oppressed you with ceremonies and enslaved you by traditions.}
-\vs p175 1:9 \textcolour{ubdarkred}{“Furthermore, these self\hyp{}centred rulers delight in doing their good works so that they will be seen by men. They make broad their phylacteries and enlarge the borders of their official robes. They crave the chief places at the feasts and demand the chief seats in the synagogues. They covet laudatory salutations in the market places and desire to be called rabbi by all men. And even while they seek all this honour from men, they secretly lay hold of widows’ houses and take profit from the services of the sacred temple. For a pretense these hypocrites make long prayers in public and give alms to attract the notice of their fellows.}
+\vs p175 1:9 \textcolour{ubdarkred}{“Furthermore, these self\hyp{}centred rulers delight in doing their good works so that they will be seen by men. They make broad their phylacteries and enlarge the borders of their official robes. They crave the chief places at the feasts and demand the chief seats in the synagogues. They covet laudatory salutations in the market places and desire to be called rabbi by all men. And even while they seek all this honour from men, they secretly lay hold of widows’ houses and take profit from the services of the sacred temple. For a pretence these hypocrites make long prayers in public and give alms to attract the notice of their fellows.}
 \vs p175 1:10 \textcolour{ubdarkred}{“While you should honour your rulers and reverence your teachers, you should call no man Father in the spiritual sense, for there is one who is your Father, even God. Neither should you seek to lord it over your brethren in the kingdom. Remember, I have taught you that he who would be greatest among you should become the server of all. If you presume to exalt yourselves before God, you will certainly be humbled; but whoso truly humbles himself will surely be exalted. Seek in your daily lives, not self\hyp{}glorification, but the glory of God. Intelligently subordinate your own wills to the will of the Father in heaven.}
 \vs p175 1:11 \textcolour{ubdarkred}{“Mistake not my words. I bear no malice toward these chief priests and rulers who even now seek my destruction; I have no ill will for these scribes and Pharisees who reject my teachings. I know that many of you believe in secret, and I know you will openly profess your allegiance to the kingdom when my hour comes. But how will your rabbis justify themselves since they profess to talk with God and then presume to reject and destroy him who comes to reveal the Father to the worlds?}
 \vs p175 1:12 \textcolour{ubdarkred}{“Woe upon you, scribes and Pharisees, hypocrites! You would shut the doors of the kingdom of heaven against sincere men because they happen to be unlearned in the ways of your teaching. You refuse to enter the kingdom and at the same time do everything within your power to prevent all others from entering. You stand with your backs to the doors of salvation and fight with all who would enter therein.}
