Tidy up the text of the Introduction

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -18,13 +18,12 @@ INTRODUCTION
 \tunemarkup{pgafour}{\fontsize{16}{19}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{15}{18}\selectfont}
 \tunemarkup{pgthinmob}{\fontsize{15}{18}\selectfont}
-\tunemarkup{pgnexus10}{\fontsize{15}{17}\selectfont}
+\tunemarkup{pgnexus10}{\fontsize{17}{19}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{14}{18}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{14}{18}\selectfont}
 \tunemarkup{pgcrownq}{\fontsize{14}{17}\selectfont}
 
-The purpose of the Fifth Epochal Revelation is to expand cosmic consciousness and enhance spiritual perception of those who
-peruse it.
+The purpose of the Fifth Epochal Revelation is to expand cosmic consciousness and enhance spiritual perception.
 The high ideal and example of the life of Jesus is needed especially today,
 in the times of planetary crisis and pandemia of fear and madness, caused by intellectual ignorance and spiritual blindness.
 
@@ -41,15 +40,13 @@ which was revised according to the present scientific knowledge and spiritual en
 \item Paragraph numbering is used both in the superscript and in the ranges printed in the head\-er of every page.
 \item Possible textual corruptions are indicated in the footnotes.
 \item The Bibliography of the human sources used in the Revelation is printed at the end of each Paper.
-      Sometimes, when it was deemed essential, the reference to the source(s) is also indicated in the footnotes.
+      When it was deemed essential the reference to the source(s) was also indicated in the footnotes.
 \end{itemize}
 
-The need for the revision of the text was predicted at \bibref[101:4.2]{p101 4:2}:
-
+The need for the revision of the text was predicted by the Revelation itself at \bibref[101:4.2]{p101 4:2}:
 \begin{quote}
 \ldots\ within a few short years many of our statements regarding the physical sciences will stand in need of revision in consequence of additional scientific developments and new discoveries.
 \end{quote}
-
 Well, those ``few short years'' have come to pass and it now devolves upon us --- its students and guardians --- to revise,
 expand and fearlessly continue the living stream of the Fifth Epochal Revelation:
 ``My Father worketh hitherto, and I work'' (John~5:17).
@@ -57,17 +54,18 @@ expand and fearlessly continue the living stream of the Fifth Epochal Revelation
 Realizing the great importance of this text, I and a group of others have carefully preserved
 the original First Edition (1955) of the Urantia Papers, known at the time as \bibemph{The Urantia Book,}
 and made it available on my website in both electronic and printed forms:
-
 \begin{center}
 \myurl{http://www.bibles.org.uk/guardian-plates.html}
 \end{center}
-
 For deriving the etymology of the words coined by the revelators, I acknowledge the use of the notes by Dr~Chris Halvorson.
-Many thanks are due to my friends Jim George and Mitch Austin for their helpful suggestions and comments,
+I am grateful to my friends Jim George and Mitch Austin for their helpful suggestions and comments,
 some of which have been incorporated into the study notes of the present edition.
 I would like to thank Irina Chernova for creating illustrations for this edition.
 For information on the human sources, upon which this Revelation is based, I am indebted almost entirely to the outstanding
-research work by Matthew Block, published on his website \myurl{https://urantiabooksources.com/}.
+research work by Matthew Block, published on his website:
+\begin{center}
+\myurl{https://urantiabooksources.com/}
+\end{center}
 Only a few of the sources related to the scientific papers have been discovered by myself independently.
 
 Last, but not least, I am deeply grateful to Troy R.~Bishop, whom I am honoured to call my mentor and dear friend.
